--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
     background-image: url("bg-intro-desktop.png");
-    background-color: hsl(0, 100%, 74%);;
+    background-color: hsl(0, 100%, 74%);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -16,17 +16,28 @@ body{
 }
 
 main{
-    
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 80%;
 }
 
-@media (min-width: 1440px){
+@media (max-width: 1440px){
     main{
         width: 100%;
         max-width: 1300px;
+        margin: 20px;
+    }
+}
+
+@media (max-width: 700px){
+    main{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+    section{
+        width: 100%;
     }
 }
 
@@ -35,11 +46,11 @@ main{
 }
 
 section{
-    width: 50%;
     max-width: 650px;
 }
 
 #left{
+    width: 575px;
     padding-right: 5px;
 }
 
@@ -82,8 +93,8 @@ form{
     font-weight: 10;
 }
 
-form .boxes{
-    width: 580px;
+form input{
+    width: 85%;
     height: 50px;
     margin: 10px;
     border-radius:5px;
@@ -99,11 +110,13 @@ form button{
 }
 
 form #claim, form p{
-    width: 575px;
+    width: 90%;
+    height: 50px;
+    margin: 10px;
+    border-radius:5px;
 }
 
 form #fname, form #lname, form #email, form #pw{
-    width: 546px;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     padding-left: 2em;
