--- a/style.css
+++ b/style.css
@@ -30,16 +30,6 @@ main{
     }
 }
 
-@media (max-width: 700px){
-    main{
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-    }
-    section{
-        width: 100%;
-    }
-}
 
 #left h1, #left p{
     color: white;
@@ -73,6 +63,8 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.2);
+
 }
 
 #right div{
@@ -136,4 +128,29 @@ form #fname, form #lname, form #email, form #pw{
 #terms span{
     color: red;
     font-weight: 600;
+}
+
+@media (max-width: 375px){
+    main{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+    section{
+        width: 100%;
+    }
+    #left{
+        width: 100%;
+    }
+    #left h1, #left p{
+        text-align: center;
+    }
+
+    #left h1{
+        font-size: 2em;
+    }
+
+    #left p{
+        width:;
+    }
 }
