--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ section{
 }
 
 #left{
-    width: 575px;
+    width: 540px;
     padding-right: 5px;
 }
 
@@ -162,11 +162,18 @@ form #fname, form #lname, form #email, form #pw{
     #right div{
         height: 80px;
         padding: 0 3em;
+        display: flex;
+        flex-direction: column;
     }
     form{
         margin-bottom: 3.5em;
     }
     #terms{
-        padding: 0 20px;
+        text-align: center;
+        padding: 0 20px 0 20px;
+        height: 4em;
+        display: flex;
+        flex-direction: column;
+        font-size: 10px;
     }
 }
