--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ form #fname, form #lname, form #email, form #pw{
         height: 80px;
         padding: 0 3em;
         display: flex;
+        flex-direction: column;
     }
     form{
         margin-bottom: 3.5em;
@@ -177,6 +178,7 @@ form #fname, form #lname, form #email, form #pw{
         padding: 0 20px 0 20px;
         height: 4em;
         display: flex;
+        flex-direction: column;
         font-size: 10px;
     }
 }
